# zavigator

./: .gitignore  .prettierignore  .prettierrc  Justfile  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
rust/: Cargo.toml
rust/crates/indexer/indexer-core/: Cargo.toml
rust/crates/indexer/indexer-core/src/: lib.rs
rust/crates/indexer/indexer-service/: Cargo.toml
rust/crates/indexer/indexer-service/src/: main.rs
rust/crates/web/wasm/: Cargo.toml
rust/crates/web/wasm/src/: lib.rs
src/app/: layout.tsx  page.tsx
src/components/: app-provider.tsx  wasm-provider.tsx
