[package]
name = "indexer-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
base64 = "0.22.1"
blake2b_simd = "1"
hex = "0.4"
anyhow = "1"
indexer-core = { path = "../indexer-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
