[package]
name = "rust-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
indexer-core = { path = "../../indexer/indexer-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2.105"
zcash_protocol = { version = "0.7.1", default-features = false, features = ["std"] }
